--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 <body>
     <main>
         <div id="image-div" class="column">
-            <img src="./image-product-desktop.jpg">
+            <figure id="img" alt="image of a perfume on aa table surrounded by long leaves"></figure>
         </div>
         <div id="info-div" class="column">
             <p id="first-p">P E R F U M E</p>
