--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
                 <h1 id="full-price">$149.99</h1>
                 <p id="crossed-price">$169.99</p>
             </div>
-            <a target="_blank" href="https://media4.giphy.com/media/v1.Y2lkPTc5MGI3NjExc3B4a3N2NzJvd2hlN3FpejV4OTRsbDNzbmFjajRtejY3b3NnMzg2dyZlcD12MV9pbnRlcm5hbF9naWZfYnlfaWQmY3Q9Zw/Vuw9m5wXviFIQ/giphy.gif"><button><span class="material-symbols-outlined">shopping_cart</span id="button-text"><span>Add to Cart</span></button></a>
+            <button><span class="material-symbols-outlined">shopping_cart</span id="button-text"><span>Add to Cart</span></button>
         </div>
     </main>
 </body>
